commit dd22a1a
Author: hutch <hutch@midwales.net>
Date:   Fri Oct 7 16:33:14 2011 +0100

    fixed image size bug #1302434

imagepicker.theme.inc
imagepicker_iframe.js

commit 3d364b8
Author: hutch <hutch@midwales.net>
Date:   Wed Sep 28 16:37:28 2011 +0100

    coder review cleanup

imagepicker.edit.inc
imagepicker.functions.inc
imagepicker.module
imagepicker.upload.inc

commit 47c7b16
Author: hutch <hutch@midwales.net>
Date:   Wed Sep 28 11:43:32 2011 +0100

    added linkbox feature

CHANGELOG.txt
imagepicker.admin.inc
imagepicker.functions.inc
imagepicker.theme.inc
imagepicker_iframe.js

commit e687b3a
Author: hutch <hutch@midwales.net>
Date:   Mon Sep 12 23:14:35 2011 +0100

    fixed groups bugs in iframe

imagepicker.functions.inc

commit e6d7ce7
Author: hutch <hutch@midwales.net>
Date:   Thu Sep 8 10:04:29 2011 +0100

    fixed comments form

CHANGELOG.txt
imagepicker.module

commit 3e1fc4e
Author: hutch <hutch@midwales.net>
Date:   Thu Aug 18 10:13:37 2011 +0100

    fixed description validation, added check_plain

CHANGELOG.txt
imagepicker.edit.inc
imagepicker.functions.inc
imagepicker.upload.inc

commit c308be8
Author: hutch <hutch@midwales.net>
Date:   Sat Jul 30 09:00:18 2011 +0100

    added some notice avoidance

imagepicker.upload.inc

commit cb43f05
Author: hutch <hutch@midwales.net>
Date:   Sat Jul 30 08:59:46 2011 +0100

    fixed pager count bug

imagepicker.group.inc

commit 3b2c96c
Author: hutch <hutch@midwales.net>
Date:   Sat Jul 30 08:58:21 2011 +0100

    was using the wrong page max

imagepicker.admin.inc

commit f8e2153
Author: hutch <hutch@midwales.net>
Date:   Fri Jul 22 20:37:12 2011 +0100

    added image title option

CHANGELOG.txt
imagepicker.admin.inc
imagepicker.css
imagepicker.form-elements.inc
imagepicker.theme.inc
imagepicker.user.inc
imagepicker_iframe.js

commit eeb66d6
Author: hutch <hutch@midwales.net>
Date:   Thu Jul 21 12:59:13 2011 +0100

    added width and height to insert

imagepicker.theme.inc
imagepicker_iframe.js
